Trim shadow jar without JavaFX files, add arguments to run the shadowJar -Requires a local path for JavaFX SDK